--- a/src/app/Modules/processReactivation/processReactivation/processReactivation.component.html
+++ b/src/app/Modules/processReactivation/processReactivation/processReactivation.component.html
@@ -42,7 +42,7 @@
       
   
       <div class=" col-xl-3 col-md-6">
-        <div class=" card bg-gradient-info border-0">
+        <div class=" card bg-gradient-green border-0">
           <div class=" card-body">
             <div class=" row">
               <div class=" col">
@@ -50,8 +50,8 @@
                   Processus 
                 </h5>
   
-                <span class=" text-uppercase text-muted font-weight-bold text-white" >
-                Facturation
+                <span class=" text-uppercase text-muted font-weight-bold text-white" style="font-size: 15px;" >
+                  Réactivation
                 </span>
   
                 <div class=" progress progress-xs mt-3 mb-0">
@@ -61,9 +61,9 @@
   
               <div class=" col-auto">
                 <div
-                  class=" icon icon-shape bg-gradient-info text-white rounded-circle shadow"
+                  class=" icon icon-shape bg-gradient-green text-white rounded-circle shadow"
                 >
-                  <i class=" ni ni-money-coins"> </i>
+                  <i class=" ni ni-active-40"> </i>
                 </div>
               </div>
             </div>
@@ -92,7 +92,7 @@
             >
               <div class=" checklist-item checklist-item-success">
                 <div class=" checklist-info">
-                  <h5 class=" checklist-title mb-0">exportFacturation.sh</h5>
+                  <h5 class=" checklist-title mb-0"> reactivateRadius.sh  </h5>
   
                   <small> Commande MB </small>
                 </div>
@@ -122,9 +122,12 @@
             <br>
             <br>
             <br>
-              <div class=" checklist-item checklist-item-warning">
+            <br>
+            
+            
+              <div class=" checklist-item checklist-item-info ">
                 <div class=" checklist-info">
-                  <h5 class=" checklist-title mb-0">suspendRadius.sh   </h5>
+                  <h5 class=" checklist-title mb-0">rebootBoxForReactivate.sh  </h5>
   
                   <small> Commande MB </small>
                 </div>
@@ -146,7 +149,39 @@
               </div>
             </li>
   
-           
+            <li
+            class=" checklist-entry list-group-item flex-column align-items-start py-4 px-4"
+          >
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+            <div class=" checklist-item checklist-item-danger">
+              <div class=" checklist-info">
+                <h5 class=" checklist-title mb-0"> treatCr.sh  </h5>
+
+                <small> Commande MB </small>
+              </div>
+
+              <!-- <div>
+                <div
+                  class=" custom-control custom-checkbox custom-checkbox-warning"
+                >
+                  <input
+                    class=" custom-control-input"
+                    id="chk-todo-task-2"
+                    type="checkbox"
+                  />
+
+                  <label class=" custom-control-label" for="chk-todo-task-2">
+                  </label>
+                </div>
+              </div> -->
+            </div>
+          </li>
   
             
           </ul>
@@ -167,37 +202,35 @@
             >
               <div class=" timeline-block">
                 <span class=" timeline-step badge-success">
-                  <i class=" ni ni-bell-55"> </i>
+                  <i class=" ni ni-active-40"> </i>
                 </span>
   
                 <div class=" timeline-content">
-                  <small class=" text-muted font-weight-bold fas fa-clock mr-1"> 1 fois/mois </small>
+                  <small class=" text-muted font-weight-bold fas fa-clock mr-1"> Non Fréquentiel </small>
             
                   <h5 class=" mt-3 mb-0">Output</h5>
   
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-success"> ● </span> Lancement du processus de la facturation chaque début de mois.
+                    <span class=" text-success"> ● </span> Réactivation de login et MDP dans la base de radius.
                   </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-success"> ● </span> Passage de statut de la demande de création de « CREATED » à « RADIUS_OK ».
+                  </p>
+                  
   
                   <div class=" mt-3">
                     <span class=" badge badge-pill badge-success mr-1">
-                      date
+                      none
                     </span>
   
-                    <span class=" badge badge-pill badge-success mr-1">
-                      string
-                    </span>
-  
-                    <span class=" badge badge-pill badge-success">
-                      query
-                    </span>
+                  
                   </div>
                 </div>
               </div>
   
               <div class=" timeline-block">
-                <span class=" timeline-step badge-warning">
-                  <i class=" ni ni-fat-delete"> </i>
+                <span class=" timeline-step badge-info">
+                  <i class=" ni ni-button-power"> </i>
                 </span>
                 
                 <div class=" timeline-content">
@@ -206,14 +239,44 @@
                   <h5 class=" mt-3 mb-0">Output</h5>
   
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-warning"> ● </span> Désactivation de login et MDP dans la base de radius.
+                    <span class=" text-info"> ● </span> Lancement de reboot à travers SAV.
                   </p>
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-warning"> ● </span> Passage de statut de la demande de création de « CREATED » à « RADIUS_KO ». 
+                    <span class=" text-info"> ● </span>  Un CR « RÉTABLISSEMENT INTERNET». 
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-info"> ● </span>   Passage de statut de la demande de création de « RADIUS_OK » à « CLOSED». 
                   </p>
   
                   <div class=" mt-3">
-                    <span class=" badge badge-pill badge-warning mr-1">
+                    <span class=" badge badge-pill badge-info mr-1">
+                      none
+                    </span>
+  
+                   
+                  </div>
+                </div>
+              </div>
+
+              <div class=" timeline-block">
+                <span class=" timeline-step badge-danger">
+                  <i class=" ni ni-fat-remove"> </i>
+                </span>
+                
+                <div class=" timeline-content">
+                  <small class=" text-muted font-weight-bold fas fa-clock mr-3"> Non Fréquentiel </small>
+  
+                  <h5 class=" mt-3 mb-0">Output</h5>
+  
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span> Envoi du CR «RETABLISSEMENT_INTERNET» vers Bicool.
+                  </p>
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-danger"> ● </span> Mise à jour du CR : treated =true. 
+                  </p>
+  
+                  <div class=" mt-3">
+                    <span class=" badge badge-pill badge-danger mr-1">
                       none
                     </span>
   
