--- a/src/app/Modules/processReactivation/processReactivation/processReactivation.component.html
+++ b/src/app/Modules/processReactivation/processReactivation/processReactivation.component.html
@@ -63,7 +63,7 @@
                 <div
                   class=" icon icon-shape bg-gradient-green text-white rounded-circle shadow"
                 >
-                  <i class=" ni ni-active-40"> </i>
+                  <i class=" ni ni-button-power"> </i>
                 </div>
               </div>
             </div>
