--- a/src/app/Modules/credentialssip/credentialssip/credentialssip.component.html
+++ b/src/app/Modules/credentialssip/credentialssip/credentialssip.component.html
@@ -123,7 +123,13 @@
             <br>
             <br>
             <br>
-            
+            <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
             
               <div class=" checklist-item checklist-item-info ">
                 <div class=" checklist-info">
@@ -159,7 +165,17 @@
           <br>
           <br>
           <br>
-            <div class=" checklist-item checklist-item-danger">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+            <div class=" checklist-item checklist-item-warning">
               <div class=" checklist-info">
                 <h5 class=" checklist-title mb-0"> treatCr.sh  </h5>
 
@@ -245,15 +261,24 @@
                   <h5 class=" mt-3 mb-0">Output</h5>
   
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-info"> ● </span> Lancement de reboot à travers SAV.
+                    <span class=" text-info"> ● </span>  Mise à jour des demandes à l’état « CREATED » avec provisioning key : <br> <br>
+                    <span class=" text-info">* </span> Si la demande de provisioning est traitée côté TR069 : <br>
+                       - Passage de statut de la demande de création de « CREATED » à                                                                                      
+                         « PROVISIONED ». <br>
+
+                    <span class=" text-info">* </span>  Sinon :<br>
+                       - Passage de statut de la demande de création de « CREATED » à « CREATED ».
+ 
                   </p>
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-info"> ● </span>  Un CR « RÉTABLISSEMENT INTERNET». 
+                    <span class=" text-info"> ● </span> Lancement de reboot à travers SAV pour les demandes à l’état « PROVISIONED». 
                   </p>
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-info"> ● </span>   Passage de statut de la demande de création de « RADIUS_OK » à « CLOSED». 
+                    <span class=" text-info"> ● </span> Un CR « TELECHARGEMENT_SIP ». 
                   </p>
-  
+                  <p class=" text-sm mt-1 mb-0">
+                    <span class=" text-info"> ● </span>Passage de statut de la demande de création de « PROVISIONED » à « TREATED». 
+                  </p>
                   <div class=" mt-3">
                     <span class=" badge badge-pill badge-info mr-1">
                       none
@@ -265,7 +290,7 @@
               </div>
 
               <div class=" timeline-block">
-                <span class=" timeline-step badge-danger">
+                <span class=" timeline-step badge-warning">
                   <i class=" ni ni-fat-remove"> </i>
                 </span>
                 
@@ -275,14 +300,14 @@
                   <h5 class=" mt-3 mb-0">Output</h5>
   
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-danger"> ● </span> Envoi du CR «RETABLISSEMENT_INTERNET» vers Bicool.
+                    <span class=" text-warning"> ● </span> Envoi du CR « TELECHARGEMENT_SIP » vers Bicool.
                   </p>
                   <p class=" text-sm mt-1 mb-0">
-                    <span class=" text-danger"> ● </span> Mise à jour du CR : treated =true. 
+                    <span class=" text-warning"> ● </span> Mise à jour du CR : treated =true. 
                   </p>
   
                   <div class=" mt-3">
-                    <span class=" badge badge-pill badge-danger mr-1">
+                    <span class=" badge badge-pill badge-warning mr-1">
                       none
                     </span>
   
