--- a/src/app/Modules/processSuspension/processSuspension/processSuspension.component.html
+++ b/src/app/Modules/processSuspension/processSuspension/processSuspension.component.html
@@ -37,6 +37,7 @@
     </div>
   </div>
   
+  
   <div class=" container-fluid mt--6">
     <div class=" row">
       
@@ -237,4 +238,61 @@
       
     </div>
   </div>
-  
+
+<!---------------------------------------begin stepper-------------------------------------------------->
+
+
+  <div class="stepperContainer card mb-4"  style="padding:7%;">
+    <div id="" class="tab-pane tab-example-result fade show active" role="tabpanel" aria-labelledby="card-component-tab">
+    
+    <div class="">
+      <div class="stepper">
+        <div class="step " [ngClass]="{'active': currentStep === 0}">
+          <div class="circle "><i class="ni-button-power text-info"></i></div>
+        </div>
+        <div class="line"></div>
+        <div class="step" [ngClass]="{'active': currentStep === 1}">
+          <div class="circle">2</div>
+        </div>
+        
+      </div>
+      <div >
+        <div id="card-team-component" class="tab-pane tab-example-result fade show active" role="tabpanel" aria-labelledby="card-team-component-tab">
+          <div >
+            <!-- Card body -->
+            <div class="card-body" *ngIf="currentStep === 0">
+              <div class="pt-4 text-center" >
+                <h5 class="h3 title">
+                  <span class="d-block mb-1">etape 1</span>
+                  <small class="h4 font-weight-light text-muted">hello 1</small>
+                </h5>
+                <div class="mt-3">
+                  <button type="button" class="btn btn-warning" (click)="reboot()">Execute</button>
+               
+                </div>
+                <div class="mt-3">
+                  <button type="button" class="btn btn-primary" (click)="nextStep()">next</button>
+               
+                </div>
+              </div>
+            </div>
+            <div class="card-body" *ngIf="currentStep === 1">
+              <div class="pt-4 text-center" >
+                <h5 class="h3 title">
+                  <span class="d-block mb-1">etape 2</span>
+                  <small class="h4 font-weight-light text-muted">hello 2</small>
+                </h5>
+                <div class="mt-3">
+                  <button type="button" class="btn btn-primary" (click)="previousStep()">back</button>
+            
+                </div>
+              </div>
+            </div>
+           
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<!---------------------------------------end  stepper-------------------------------------------------->
