--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -25,13 +25,13 @@
           <div class="text-center text-muted mb-4">
             <small>Sign in with credentials</small>
           </div>
-          <form role="form">
+          <form role="form" (ngSubmit)="onSubmit()">
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" placeholder="Email" type="email">
+                <input class="form-control" type="text" placeholder="Login" id="username" [(ngModel)]="username" name="username" required>
               </div>
             </div>
             <div class="form-group">
@@ -39,7 +39,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password">
+                <input class="form-control" placeholder="Password" type="password" id="password" [(ngModel)]="password" name="password" required>
               </div>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
@@ -49,7 +49,7 @@
               </label>
             </div>
             <div class="text-center">
-              <button type="button" class="btn btn-primary my-4">Sign in</button>
+              <button type="submit" class="btn btn-primary my-4">Sign in</button>
             </div>
           </form>
         </div>
