--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,6 +1,6 @@
-<div class="main-content">
-  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md bg-gradient-danger">
-    <div class="container px-4">
+<div class="main-content" >
+  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md bg-gradient-danger" >
+    <div class="container px-4" >
       <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/facturation']">
         <img src="assets/img/brand/argon-white.png" />
       </a>
@@ -62,7 +62,7 @@
     <div class="row align-items-center justify-content-xl-between">
       <div class="col-xl-6">
         <div class="copyright text-center text-xl-left text-muted">
-          &copy; PFE {{ test | date: "yyyy" }} <a href="https://www.creative-tim.com?ref=ada-footer-auth-layout" class="font-weight-bold ml-1" target="_blank">Aymen Zaabar</a>
+          &copy; PFE {{ test | date: "yyyy" }} <a href="https://www.linkedin.com/in/aymen-zaabar-a368a9183" class="font-weight-bold ml-1" target="_blank">Aymen Zaabar</a>
         </div>
       </div>
       <div class="col-xl-6">
