--- a/src/app/Modules/processFacturation/processFacturation/processFacturation.component.html
+++ b/src/app/Modules/processFacturation/processFacturation/processFacturation.component.html
@@ -235,6 +235,111 @@
     </div>
   </div>
 
+<!---------------------------------------begin stepper-------------------------------------------------->
+
+
+<div class="stepperContainer card mb-4"  style="padding:7%; margin: 6%;">
+  <div id="" class="tab-pane tab-example-result fade show active" role="tabpanel" aria-labelledby="card-component-tab">
+  
+  <div class="">
+    <div class="stepper">
+      <div class="step " [ngClass]="{'active': currentStep === 0}">
+        <div class="circle  badge-success">
+          <i class=" ni ni-bell-55"> </i>
+        </div>
+        
+      </div>
+      <div class="line"></div>
+      <div class="step" [ngClass]="{'active': currentStep === 1}">
+        <div class="circle badge-warning"><i class=" ni ni-fat-delete"> </i></div>
+      </div>
+      
+    </div>
+    <div >
+      <div id="card-team-component" class="tab-pane tab-example-result fade show active" role="tabpanel" aria-labelledby="card-team-component-tab">
+        <div >
+          <!-- Card body -->
+          <div class="card-body" *ngIf="currentStep === 0">
+            <div class="pt-4 text-center" >
+              
+              <h2 class=" mb-0 text-info"> Batch exportFacturation.sh</h2>
+                <h5 class="h3 title">
+                <!-- <small class="h4 font-weight-light text-muted">hello 1</small> -->
+              </h5>
+              <div class=" form-group row">
+                <label
+                  class=" col-md-2 col-form-label form-control-label"
+                  for="example-datetime-local-input"
+                >
+                  Datetime
+                </label>
+
+                <div class=" col-md-10">
+                  <input
+                  type="text" [(ngModel)]="date"
+                    class=" form-control"
+                    id="example-datetime-local-input"
+                    type="datetime-local"
+                    value="2018-11-23T10:30:00"
+                  />
+                </div>
+              </div>
+              <div class="mt-3">
+              <button class=" btn btn-icon btn-info " (click)="exportFacture()">
+                <span class=" btn-inner--icon">
+                  <i class=" ni ni-button-play"> </i>
+                </span>
+    
+                <span class=" btn-inner--text">Execute</span>
+              </button>
+              
+            </div>
+              
+              <div class="mt-3">
+                <button type="button" class="btn btn-icon btn-primary" (click)="nextStep()">
+                  <span class=" btn-inner--icon">
+                    <i class=" ni ni-bold-right"> </i>
+                  </span>
+                  <span class=" btn-inner--text">Next</span></button>
+             
+              </div>
+            </div>
+          </div>
+          <div class="card-body" *ngIf="currentStep === 1">
+            <div class="pt-4 text-center" >
+              <h2 class=" mb-0 text-warning"> Batch suspendRadius.sh </h2>
+              <h5 class="h3 title">
+              <!-- <small class="h4 font-weight-light text-muted">hello 1</small> -->
+            </h5>
+            <div class="mt-3">
+           
+            <button class=" btn btn-icon btn-warning" (click)="treatCrSuspend()">
+              <span class=" btn-inner--icon">
+                <i class=" ni ni-button-play"> </i>
+              </span>
+  
+              <span class=" btn-inner--text">Execute</span>
+            </button>
+            
+          </div>
+              <div class="mt-3">
+                <button type="button" class="btn btn-primary" (click)="previousStep()">
+                  <span class=" btn-inner--icon">
+                    <i class=" ni ni-bold-left"> </i>
+                  </span>
+                  <span class=" btn-inner--text">back</span></button>
+          
+              </div>
+            </div>
+          </div>
+         
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!---------------------------------------end  stepper-------------------------------------------------->
 
 
 
