--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="header bg-gradient-danger py-7 py-lg-8">
+<div class="header ras bg-gradient-danger py-7 py-lg-8" >
   <div class="container">
     <div class="header-body text-center mb-7">
       <div class="row justify-content-center">
@@ -25,13 +25,17 @@
           <div class="text-center text-muted mb-4">
             <small>Sign in with credentials</small>
           </div>
-          <form role="form" (ngSubmit)="onSubmit()">
+          <form *ngIf="!isLoggedIn"
+          name="form"
+          (ngSubmit)="f.form.valid && onSubmit()"
+          #f="ngForm"
+          novalidate>
             <div class="form-group mb-3">
               <div class="input-group input-group-alternative">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                 </div>
-                <input class="form-control" type="text" placeholder="Login" id="username" [(ngModel)]="username" name="username" required>
+                <input type="text" name="username" class="form-control" [(ngModel)]="form.username" required minlength="3" maxlength="50" #username="ngModel" ngModel >
               </div>
             </div>
             <div class="form-group">
@@ -39,8 +43,7 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                 </div>
-                <input class="form-control" placeholder="Password" type="password" id="password" [(ngModel)]="password" name="password" required>
-              </div>
+                <input name="password" type="password" class="form-control" [(ngModel)]="form.password" required minlength="6" maxlength="20" #password="ngModel">              </div>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
               <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
