profile done with toastr problem

--- a/src/app/Modules/processFacturation/processFacturation/processFacturation.component.html
+++ b/src/app/Modules/processFacturation/processFacturation/processFacturation.component.html
@@ -342,7 +342,10 @@
 <!---------------------------------------end  stepper-------------------------------------------------->
 
 
-
+aymen start
+<div *ngFor="let log of logs">
+    {{ log }}
+  </div>
 
   <!----------------------------------Begin First stepper-------------------------------------------------------------
   <div class="stepperContainer"  style="padding: 3%;">
