--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -95,7 +95,7 @@
               <span class="avatar avatar-sm rounded-circle">
                 <img
                   alt="Image placeholder"
-                  src="assets/img/theme/adm.jpg"
+                  src="{assets/img/theme/adm.jpg}"
                 />
               </span>
               <div class="media-body ml-2 d-none d-lg-block">
