navbar routes edited

--- a/src/app/Modules/profile/profile/profile.component.html
+++ b/src/app/Modules/profile/profile/profile.component.html
@@ -7,7 +7,7 @@
   <div class=" container-fluid d-flex align-items-center">
     <div class=" row">
       <div class=" col-lg-7 col-md-10">
-        <h1 class=" display-2 text-white">Bonjour {{user.name}}</h1>
+        <h1 class=" display-2 text-white">Bonjour {{user.lastName}}</h1>
 
         <p class=" text-white mt-0 mb-5">
             Il s'agit de votre page de profil. Vous pouvez consulter les données de votre profil et mettre à jour vos informations d'identification.
