--- a/src/app/layouts/auth-layout/auth-layout.component.html
+++ b/src/app/layouts/auth-layout/auth-layout.component.html
@@ -1,5 +1,5 @@
 <div class="main-content" >
-  <nav class="navbar navbar-top navbar-horizontal navbar-expand-md bg-gradient-danger" >
+  <!--<nav class="navbar navbar-top navbar-horizontal navbar-expand-md bg-gradient-danger" >
     <div class="container px-4" >
       <a class="navbar-brand" routerLinkActive="active" [routerLink]="['/facturation']">
         <img src="assets/img/brand/argon-white.png" />
@@ -9,7 +9,6 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse"  [ngbCollapse]="isCollapsed" id="sidenav-collapse-main">
-        <!-- Collapse header -->
         <div class="navbar-collapse-header d-md-none">
           <div class="row">
             <div class="col-6 collapse-brand">
@@ -25,7 +24,6 @@
             </div>
           </div>
         </div>
-        <!-- Navbar items -->
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link nav-link-icon" routerLinkActive="active" [routerLink]="['/dashboard']">
@@ -54,7 +52,7 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav> -->
   <router-outlet></router-outlet>
 </div>
 <footer class="py-5">
